--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 
 <body>
- <a href="https://docs.google.com/presentation/d/1jVzd7t3GVcJIJZtk4dwRLEJp1Jd1GsF_9nIk9XRV-7Y/edit?usp=sharing">Theory of Performance</a>
+ <p>Team Colors:</p>
+ <p>Red - Socks and Belt</p>
+ <p>Grey - Pants</p>
+
 </body>
