--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 
 
 <body>
- <p>Team Colors:</p>
+ <h4>Team Colors:</h4>
  <p>Red - Socks and Belt</p>
  <p>Grey - Pants</p>
-
+ 
+ <h4>Coaches</h4>
+ <p>Rodney Gomez</p>
+ <p>Rod Thompson</p>
+ <p>Robert Morris</p>
+ <p>Tyrone Jones</p>
+ <p>Josh Payne</p>
 </body>
