--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
  <p>Robert Morris</p>
  <p>Tyrone Jones</p>
  <p>Josh Payne</p>
+ <p>Joe Rodriguez</p>
+ <p>Ray Beaver</p>
+ <p>Greg Shumaker</p>
+ <p>Richie Geren</p>
 </body>
