--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
 
-
-<body>
- <h4>Team Colors:</h4>
- <p>Red - Socks and Belt</p>
- <p>Grey - Pants</p>
- 
- <h4>Coaches</h4>
- <p>Rodney Gomez</p>
- <p>Rod Thompson</p>
- <p>Robert Morris</p>
- <p>Tyrone Jones</p>
- <p>Josh Payne</p>
- <p>Joe Rodriguez</p>
- <p>Ray Beaver</p>
- <p>Greg Shumaker</p>
- <p>Richie Geren</p>
-</body>
+<a target="_blank" href="https://docs.google.com/presentation/d/1PIVaFV0XlEbfyrxtV5YRYsmra8kEMaSgLib-H6gdt60/edit#slide=id.g403f06cf83_2_0">
+ Baseball: America's Pastime?
+</a>
