--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<a target="_blank" href="https://docs.google.com/presentation/d/1PIVaFV0XlEbfyrxtV5YRYsmra8kEMaSgLib-H6gdt60/edit#slide=id.g403f06cf83_2_0">
+<a target="_blank" href="https://docs.google.com/presentation/d/1PIVaFV0XlEbfyrxtV5YRYsmra8kEMaSgLib-H6gdt60/edit?usp=sharing">
  Baseball: America's Pastime
 </a>
 </br>
